[package]
name = "gerust"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]

[dependencies]
hyper = { version = "0.11", features = ["compat"]}
futures = "0.1"
http = "0.1"
mime = "0.3"
tokio-core = "0.1"
futures-cpupool = "0.1"

[dev-dependencies]
log = "*"
env_logger = "*"
