[package]
name = "gerust"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]

[dependencies]
hyper = { version = "0.11", features = ["compat"]}
futures = "0.1"
http = "0.1"
mime = "0.3"
tokio-core = "0.1"
futures-cpupool = "0.1"
backtrace = "0.3"
regex = "0.2"
lazy_static = "1.0"
log = "*"
bytes = "0.4.4"

[dev-dependencies]
env_logger = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"